# OnixEngine

./: CMakeLists.txt  README.md
Imp3D/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  Entities.cpp  Entities.h  Imp3D.cpp  prikol.cpp
Imp3D/ECS_World/: ComponentBase.cpp  ComponentClass.cpp  ComponentClass.h  Entities.cpp  Entities.h  World.cpp  World.h
Imp3D/Managers/: ResourceManager.cpp
Imp3D/shaders/: triangle.frag
OnixEngine/: CMakeLists.txt  OnixEngine.cpp  OnixEngine.h
OnixEngine/shaders/: triangle.vert
